--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "dependencies": {
     "gitconfiglocal": "^1.0.0"
   },
+  "devDependencies": {
+    "mocha": "^2.3.3",
+    "temp": "^0.8.3"
+  },
   "engines": {
     "node": ">= 0.12"
   }
