--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gitconfiglocal": "^1.0.0"
   },
   "devDependencies": {
+    "chai": "^3.4.1",
     "mocha": "^2.3.3",
     "temp": "^0.8.3"
   },
